# VEM

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: include_tinyxml2.cmake
results/: convergence_log.txt
scripts/: convergence.sh  cvt.py
scripts/results/: convergence_log.txt
src/: AgglomerationManager.cpp  AgglomerationManager.hpp  AnalyticalSolutions.hpp  CMakeLists.txt  ErrorAnalysis.hpp  Geometry.cpp  Geometry.hpp  MathUtils.hpp  VEMElement.cpp  VEMElement.hpp  VEMMesh.cpp  VEMMesh.hpp  VEMSolver.cpp  VEMSolver.hpp
src/fem/: CMakeLists.txt  FEMSolver.cpp  FEMSolver.hpp  LinearTet.cpp  LinearTet.hpp
src/io/: CMakeLists.txt  MeshIO.hpp  VTKLoader.cpp  VTKLoader.hpp  VTKWriter.cpp  VTKWriter.hpp
test/: CMakeLists.txt  test_adjacent.cpp  test_agglomeration_full.cpp  test_agglomeration_preview.cpp  test_beam_gravity.cpp  test_fem.cpp  test_geo.cpp  test_patch_linear.cpp  test_patch_single.cpp  test_solver.cpp  test_stability.cpp  test_vem.cpp  test_vem_vs_fem.cpp
